--- a/package.json
+++ b/package.json
@@ -1,26 +1,39 @@
 {
-  "name": "battleship",
-  "version": "1.0.0",
-  "description": "",
-  "main": "game.js",
-  "scripts": {
-    "test": "jest"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/muditchoudhary/Battleship.git"
-  },
-  "author": "Mudit Choudhary",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/muditchoudhary/Battleship/issues"
-  },
-  "homepage": "https://github.com/muditchoudhary/Battleship#readme",
-  "devDependencies": {
-    "css-loader": "^6.7.3",
-    "jest": "^29.3.1",
-    "style-loader": "^3.3.1",
-    "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
-  }
+    "name": "battleship",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "scripts": {
+        "test": "jest",
+        "start": "webpack serve --open",
+        "build": "webpack",
+        "watch": "webpack --watch"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/muditchoudhary/Battleship.git"
+    },
+    "author": "Mudit Choudhary",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/muditchoudhary/Battleship/issues"
+    },
+    "homepage": "https://github.com/muditchoudhary/Battleship#readme",
+    "devDependencies": {
+        "css-loader": "^6.7.3",
+        "eslint": "^8.33.0",
+        "eslint-config-airbnb-base": "^15.0.0",
+        "eslint-config-prettier": "^8.6.0",
+        "eslint-plugin-import": "^2.27.5",
+        "html-webpack-plugin": "^5.5.0",
+        "jest": "^29.3.1",
+        "prettier": "2.8.3",
+        "style-loader": "^3.3.1",
+        "webpack": "^5.75.0",
+        "webpack-cli": "^5.0.1",
+        "webpack-dev-server": "^4.11.1"
+    },
+    "dependencies": {
+        "lodash": "^4.17.21"
+    }
 }
